; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/extr_buffer.c_evbuffer_freeze.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/extr_buffer.c_evbuffer_freeze.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evbuffer = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evbuffer_freeze(%struct.evbuffer* %0, i32 %1) #0 {
  %3 = alloca %struct.evbuffer*, align 8
  %4 = alloca i32, align 4
  store %struct.evbuffer* %0, %struct.evbuffer** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %6 = call i32 @EVBUFFER_LOCK(%struct.evbuffer* %5)
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %11 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  br label %15

12:                                               ; preds = %2
  %13 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %14 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %13, i32 0, i32 1
  store i32 1, i32* %14, align 4
  br label %15

15:                                               ; preds = %12, %9
  %16 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %17 = call i32 @EVBUFFER_UNLOCK(%struct.evbuffer* %16)
  ret i32 0
}

declare dso_local i32 @EVBUFFER_LOCK(%struct.evbuffer*) #1

declare dso_local i32 @EVBUFFER_UNLOCK(%struct.evbuffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
